// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text All accent variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c3::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(333,71%,51%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c4::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(0,0%,32%,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c5::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(221,83%,53%,1);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c6::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(142,76%,36%,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c7::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(32,95%,44%,1);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c8::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(0,72%,51%,1);
}

.c2 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
}

<body>
    <div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          major
        </dd>
        <dt
          class="c2"
        >
          major
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c3"
        >
          minor
        </dd>
        <dt
          class="c2"
        >
          minor
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c4"
        >
          neutral
        </dd>
        <dt
          class="c2"
        >
          neutral
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c5"
        >
          info
        </dd>
        <dt
          class="c2"
        >
          info
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c6"
        >
          success
        </dd>
        <dt
          class="c2"
        >
          success
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c7"
        >
          warning
        </dd>
        <dt
          class="c2"
        >
          warning
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c8"
        >
          danger
        </dd>
        <dt
          class="c2"
        >
          danger
        </dt>
      </div>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c3::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(333,71%,51%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c4::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(0,0%,32%,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c5::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(221,83%,53%,1);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c6::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(142,76%,36%,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c7::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(32,95%,44%,1);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c8::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(0,72%,51%,1);
}

.c2 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
}

<div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        major
      </dd>
      <dt
        class="c2"
      >
        major
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c3"
      >
        minor
      </dd>
      <dt
        class="c2"
      >
        minor
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c4"
      >
        neutral
      </dd>
      <dt
        class="c2"
      >
        neutral
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c5"
      >
        info
      </dd>
      <dt
        class="c2"
      >
        info
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c6"
      >
        success
      </dd>
      <dt
        class="c2"
      >
        success
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c7"
      >
        warning
      </dd>
      <dt
        class="c2"
      >
        warning
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c8"
      >
        danger
      </dd>
      <dt
        class="c2"
      >
        danger
      </dt>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text All color variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c2 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(271,81%,56%,1);
}

.c3 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(333,71%,51%,1);
}

.c4 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(0,0%,32%,1);
}

.c5 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(221,83%,53%,1);
}

.c6 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(142,76%,36%,1);
}

.c7 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(32,95%,44%,1);
}

.c8 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(0,72%,51%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          major
        </dd>
        <dt
          class="c2"
        >
          major
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          minor
        </dd>
        <dt
          class="c3"
        >
          minor
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          neutral
        </dd>
        <dt
          class="c4"
        >
          neutral
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          info
        </dd>
        <dt
          class="c5"
        >
          info
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          success
        </dd>
        <dt
          class="c6"
        >
          success
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          warning
        </dd>
        <dt
          class="c7"
        >
          warning
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          danger
        </dd>
        <dt
          class="c8"
        >
          danger
        </dt>
      </div>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c2 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(271,81%,56%,1);
}

.c3 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(333,71%,51%,1);
}

.c4 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(0,0%,32%,1);
}

.c5 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(221,83%,53%,1);
}

.c6 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(142,76%,36%,1);
}

.c7 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(32,95%,44%,1);
}

.c8 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(0,72%,51%,1);
}

<div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        major
      </dd>
      <dt
        class="c2"
      >
        major
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        minor
      </dd>
      <dt
        class="c3"
      >
        minor
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        neutral
      </dd>
      <dt
        class="c4"
      >
        neutral
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        info
      </dd>
      <dt
        class="c5"
      >
        info
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        success
      </dd>
      <dt
        class="c6"
      >
        success
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        warning
      </dd>
      <dt
        class="c7"
      >
        warning
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        danger
      </dd>
      <dt
        class="c8"
      >
        danger
      </dt>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,0%,0.6);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c2 {
  color: hsla(217,33%,17%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
}

<body>
    <div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          default label
        </dd>
        <dt
          class="c2"
        >
          default value
        </dt>
      </div>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,0%,0.6);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c2 {
  color: hsla(217,33%,17%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
}

<div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        default label
      </dd>
      <dt
        class="c2"
      >
        default value
      </dt>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c2 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
}

<body>
    <div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          default label
        </dd>
        <dt
          class="c2"
        >
          default value
        </dt>
      </div>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(271,81%,56%,1);
}

.c2 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
}

<div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        default label
      </dd>
      <dt
        class="c2"
      >
        default value
      </dt>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text Other variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(333,71%,51%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c3::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(142,76%,36%,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c5::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(221,83%,53%,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c7::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(32,95%,44%,1);
}

.c2 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 700;
}

.c4 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: italic;
}

.c8 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(0,0%,100%,0.5);
}

<body>
    <div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          minor accent
        </dd>
        <dt
          class="c2"
        >
          minor accent bold value
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c3"
        >
          success accent
        </dd>
        <dt
          class="c4"
        >
          success accent underline value
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c5"
        >
          info accent
        </dd>
        <dt
          class="c6"
        >
          info accent italicized value
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c7"
        >
          warning accent
        </dd>
        <dt
          class="c8"
        >
          warning accent disabled value
        </dt>
      </div>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c1::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(333,71%,51%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c3::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(142,76%,36%,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c5::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(221,83%,53%,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c7::before {
  content: '';
  height: 0.625rem;
  width: 2px;
  margin-right: 0.25rem;
  background-color: hsla(32,95%,44%,1);
}

.c2 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 700;
}

.c4 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  color: hsla(210,40%,96%,1);
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: italic;
}

.c8 {
  margin-left: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(0,0%,100%,0.5);
}

<div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        minor accent
      </dd>
      <dt
        class="c2"
      >
        minor accent bold value
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c3"
      >
        success accent
      </dd>
      <dt
        class="c4"
      >
        success accent underline value
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c5"
      >
        info accent
      </dd>
      <dt
        class="c6"
      >
        info accent italicized value
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c7"
      >
        warning accent
      </dd>
      <dt
        class="c8"
      >
        warning accent disabled value
      </dt>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text With icons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c3 {
  color: hsla(210,40%,96%,1);
  font-size: 0.875rem;
  font-weight: 400;
  margin-left: 0.875rem;
}

.c5 {
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(142,76%,36%,1);
  margin-left: 0.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 0.625rem;
  width: 0.625rem;
  margin-right: 0.25rem;
  color: hsla(271,81%,56%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 0.625rem;
  width: 0.625rem;
  margin-right: 0.25rem;
  color: hsla(142,76%,36%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          <i
            class="c2"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </i>
          settings icon
        </dd>
        <dt
          class="c3"
        >
          settings icon value
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          <i
            class="c2"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </i>
          settings icon
        </dd>
        <dt
          class="c3"
        >
          major accent value
        </dt>
      </div>
      <div
        class="c0"
        role="contentinfo"
      >
        <dd
          class="c1"
        >
          <i
            class="c4"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </i>
          success icon
        </dd>
        <dt
          class="c5"
        >
          success color value
        </dt>
      </div>
    </div>
  </body>,
  "container": .c0 {
  margin-bottom: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  font-weight: 700;
  font-size: 0.625rem;
  text-transform: uppercase;
  color: hsla(0,0%,100%,0.7);
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

.c3 {
  color: hsla(210,40%,96%,1);
  font-size: 0.875rem;
  font-weight: 400;
  margin-left: 0.875rem;
}

.c5 {
  font-size: 0.875rem;
  font-weight: 400;
  color: hsla(142,76%,36%,1);
  margin-left: 0.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 0.625rem;
  width: 0.625rem;
  margin-right: 0.25rem;
  color: hsla(271,81%,56%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 0.625rem;
  width: 0.625rem;
  margin-right: 0.25rem;
  color: hsla(142,76%,36%,1);
}

<div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        <i
          class="c2"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </i>
        settings icon
      </dd>
      <dt
        class="c3"
      >
        settings icon value
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        <i
          class="c2"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </i>
        settings icon
      </dd>
      <dt
        class="c3"
      >
        major accent value
      </dt>
    </div>
    <div
      class="c0"
      role="contentinfo"
    >
      <dd
        class="c1"
      >
        <i
          class="c4"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </i>
        success icon
      </dd>
      <dt
        class="c5"
      >
        success color value
      </dt>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
